PO-2255 - fix build after rebase and tidying